test/tests/stages/18_structures/invalid_types/extra_credit/union_struct_conflicts/conflicting_tag_decl_and_use.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  struct
  identifier(x)
  {
  int
  identifier(a)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  union
  identifier(x)
  identifier(foo)
  ;
  return
  const int(0)
  ;
  }
